--- a/main.css
+++ b/main.css
@@ -3,45 +3,59 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 #canvas1 {
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: 400px;
   position: absolute;
   top: 0;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-#stop {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: blue;
-  font-size: 120px;
-  transform: translate(-50%, -50%);
+  right: 0;
 }
 
 #start {
-  position: absolute;
-  top: 75%;
+  top: 5%;
+  height: 90%;
   left: 50%;
-  background-color: blue;
-  font-size: 120px;
-  transform: translate(-50%, -50%);
+}
+
+#header {
+  display: flex;
+  align-items: center;
+  background-color: lightgray;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 10%;
+  min-height: 30px;
 }
 
 .selection {
   position: absolute;
-  top: 10%;
+  transform: translate(-50%, 0);
+  font-size: 100%;
 }
 
 #rain {
+  height: 20px;
+  width: 125px;
   left: 25%;
 }
 
-#leaves {
-  left: 50%;
+#waterfall {
+  height: 20px;
+  width: 125px;
+  left: 75%;
 }
 
-#waterfall {
-  left: 75%;
+#footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 0.75em;
+  background-color: white;
+  padding: 1%;
 }
