--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 #canvas1 {
   margin: auto;
   display: block;
-  width: 800px;
+  width: 100%;
   height: 400px;
   position: absolute;
   top: 0;
@@ -24,8 +24,9 @@
 
 #header {
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  background-color: lightgray;
+  background-color: rgb(225, 225, 225);
   position: absolute;
   top: 0;
   width: 100%;
@@ -33,21 +34,37 @@
   min-height: 30px;
 }
 
+button {
+  border: #4e9af1;
+  border-radius: 2em;
+  background-color:#4e9af1;
+  color: white;
+  height: 30px;
+  width: 7em;
+  font-size: 1em;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+}
+
+button:disabled {
+  background-color: gray;
+  color: black;
+}
+
+button:hover, #start {
+  cursor: pointer;
+}
+
 .selection {
   position: absolute;
   transform: translate(-50%, 0);
-  font-size: 100%;
+
 }
 
 #rain {
-  height: 20px;
-  width: 125px;
   left: 25%;
 }
 
 #waterfall {
-  height: 20px;
-  width: 125px;
   left: 75%;
 }
 
@@ -58,4 +75,14 @@
   font-size: 0.75em;
   background-color: white;
   padding: 1%;
+}
+
+@media (min-width: 800px) {
+  #canvas1 {
+    width: 800px;
+  }
+
+  button {
+    width: 180px;
+  }
 }
